WorkInProgress/Codeforces - Codeforces Round #675 (Div. 2)/C. Bargain/attic/stderr
[1m/Users/lsantel/Competitive-Programming/solutions/Codeforces - Codeforces Round #675 (Div. 2)/C. Bargain/sol.cpp:135:12: [0m[0;1;31merror: [0m[1muse of undeclared identifier 'mul'[0m
    return mul(x, x-1) / 2;
[0;1;32m           ^
[0m1 error generated.
